--- a/src/components/Login/index.scss
+++ b/src/components/Login/index.scss
@@ -10,6 +10,41 @@
   justify-content: center;
   align-items: center;
 }
+
+.avatarBox{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+  margin-top: -2rem;
+}
+.avatarBg{
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  background: #e8e8e8;
+  background-image: url('https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=2433558526,772679684&fm=26&gp=0.jpg');
+  background-repeat:  no-repeat;
+  background-size: 100% 100%;
+  box-shadow: 0px 0px 15px 0px #999;
+}
+.inputBox{
+  border-radius: 6px;
+  overflow: hidden;
+  :global {
+    .inputLine:after{
+      border-bottom: 0px;
+    }
+  }
+}
+
+.inputItem {
+  :global {
+    .am-input-label.am-input-label-4{
+      width: 0.36rem;
+    }
+  }
+}
+
 .loginBox{
   width: 80%;
   // height: 300px;
